syntax = "proto3";
package sweepstake;

option java_package = "sweepstake";
option java_outer_classname = "SweepstakeService";

enum SweepstakeStatus {
  OPEN = 0;
  ALLOCATED = 1;
  CLOSED = 2;
}

enum SweepstakeTypeCommon {
  Correct_Score_FT = 0;
  Correct_Score_HT = 1;
}

enum ProcessStatus {
  PENDING = 0;
  INVALID = 1;
  PERSISTED = 2;
}

message Sweepstake {
  string id = 1;
  string name = 2;
  string joinCode = 3;
  SweepstakeStatus status = 4;
  bool isPrivate = 5;
  string ownerId = 6;
  string sweepstakeEventId = 7;
  SweepstakeTypeCommon sweepstakeType = 8;
  ProcessStatus processStatus = 9;
  int32 sweepstakeListSize = 10;
  int32 minimumPlayers = 11;
  int32 maximumPlayerTickets = 12;
  BigDecimal stake = 13;
  int32 totalNumberOfTickets = 14;
}

message BigDecimal {
  int32 scale = 1;
  BigInteger int_val = 2;
}

message BigInteger {
  bytes value = 1;
}

message JoinCode {
  string joinCode = 1;
}

message SweepstakeId {
  string sweepstakeId = 1;
}

message Map {
  map<int64, string> pairs = 1;
}

service SweepstakeServiceInternal {
  rpc updateSweepstake(Sweepstake) returns (Sweepstake);
  rpc findSweepstakeByJoinCode(JoinCode) returns (Sweepstake);
  rpc findSweepstakeById(SweepstakeId) returns (Sweepstake);
  rpc getResultHelperMap(Sweepstake) returns (Map);
}

service SweepstakeServiceExternal {
  rpc requestNewSweepstake(Sweepstake) returns (stream Sweepstake);
  rpc createSweepstake(Sweepstake) returns (Sweepstake);
}